<resources>
    <string name="app_name">Music</string>
    <string name="artistName">Fleetwood Mac</string>
    <string name="albumName">Rumours</string>
    <string name="albumDescription">Rumours is the eleventh studio album by the British-American rock band Fleetwood Mac, released on 4 February 1977 by Warner Bros. Records. Largely recorded in California in 1976, it was produced by the band with Ken Caillat and Richard Dashut.</string>
    <string name="playButton">Play Album</string>
    <string name="albumCover">Album cover</string>
    <string name="artistIcon">Artist icon</string>
    <string name="albumIcon">Album icon</string>
</resources>