<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/albumCover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cover"
        />


    <ImageView
        android:id="@+id/artistIcon"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription = "@string/artistIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumCover"
        app:srcCompat="@drawable/artist" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/artistName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/kyivtypesans_bold_"
        app:layout_constraintStart_toEndOf="@+id/artistIcon"
        app:layout_constraintTop_toBottomOf="@+id/albumCover" />

    <ImageView
        android:id="@+id/albumIcon"
        android:layout_width="28dp"
        android:layout_height="31dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/albumIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistIcon"

        app:srcCompat="@drawable/album" />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/albumName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/kyivtypesans_bold_"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/albumIcon"
        app:layout_constraintTop_toBottomOf="@+id/artistName" />

    <TextView
        android:id="@+id/albumDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/albumDescription"
        android:justificationMode="inter_word"
        android:textSize="12sp"
        android:fontFamily="@font/ppneuemachina_plainregular"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumName" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playButton"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/kyivtypesans_bold_"
        app:layout_constraintTop_toBottomOf="@+id/albumDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>